--- a/src/components/map/map.astro
+++ b/src/components/map/map.astro
@@ -1,4 +1,7 @@
 ---
+import Section from "@layouts/Section.astro";
+import preferences from "@data/preferences.json";
+
 export interface props {
   lat: number;
   lng: number;
@@ -11,7 +14,6 @@ export interface props {
   key?: string;
 }
 
-import preferences from "@data/preferences.json";
 const { lat, lng, zoom, marker, key, indent } = Astro.props;
 
 const apiKey = preferences.API.google_maps.api_key;
@@ -20,10 +22,7 @@ const mapType = Astro.props.mapType ?? "hybrid";
 const mapId = "map-" + key;
 ---
 
-<section
-  class:list={["map", { "no-indent": !indent }]}
-  style=`--height: ${height};`
->
+<Section component="map" {...Astro.props}>
   <div
     id={mapId}
     class="map-box"
@@ -36,7 +35,7 @@ const mapId = "map-" + key;
     data-api-key={apiKey}
   >
   </div>
-</section>
+</Section>
 
 <script>
   import { Loader } from "@googlemaps/js-api-loader";
@@ -57,25 +56,30 @@ const mapId = "map-" + key;
     const { Map } = (await google.maps.importLibrary(
       "maps"
     )) as google.maps.MapsLibrary;
-    const { Marker } = await google.maps.importLibrary("marker") as google.maps.MarkerLibrary;
+    const { Marker } = (await google.maps.importLibrary(
+      "marker"
+    )) as google.maps.MarkerLibrary;
 
     document.querySelectorAll("[data-map]").forEach((e, i) => {
       if (!(e instanceof HTMLElement)) return;
 
-      const position = {lat: Number(e.dataset?.lat), lng: Number(e.dataset?.lng)};
+      const position = {
+        lat: Number(e.dataset?.lat),
+        lng: Number(e.dataset?.lng),
+      };
 
       const map = new Map(e, {
         center: position,
         zoom: Number(e.dataset?.zoom),
         mapTypeId: e.dataset?.mapType,
-        ...(e.dataset?.mapType == "roadmap" && {styles: styles}),
+        ...(e.dataset?.mapType == "roadmap" && { styles: styles }),
       });
 
       if ("marker" in e.dataset) {
         new Marker({
           position,
-          map
-        })
+          map,
+        });
       }
     });
   });
@@ -84,10 +88,5 @@ const mapId = "map-" + key;
 <style>
   .map-box {
     min-height: 100%;
-  }
-
-  section {
-    /* min-height: var(--height); */
-    height: var(--height);
   }
 </style>
