--- a/src/components/richtext/richtext.astro
+++ b/src/components/richtext/richtext.astro
@@ -1,5 +1,6 @@
 ---
-import { convertColorString } from "@mws-astro/util";
+// import { convertColorString } from "@mws-astro/util";
+import Section from "@layouts/Section.astro";
 import Markdown from "@shared/Markdown.astro";
 
 export interface Props {
@@ -10,15 +11,12 @@ export interface Props {
 }
 
 const { background_color, style, classes, content } = Astro.props;
-const background = convertColorString(background_color);
+// const background = convertColorString(background_color);
 ---
 
-<section
-  style={{...(background && { "--background-color": background })}}
-  class:list={["rich-text", classes]}
->
+<Section component="richtext" {...Astro.props}>
   <Markdown {content} />
-</section>
+</Section>
 
 <style>
   section {
