--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -3,12 +3,21 @@ import { Markdown as RemoteMarkdown } from "astro-remote";
 import MarkdownIt from "markdown-it";
 import { replaceCmsEmbeds } from "@mws-astro/util";
 import Blockquote from "@components/blockquote/blockquote.astro";
+import Button from "@components/button/button.astro";
 import Icon from "@shared/icon.astro";
 import Mailbuild from "@components/mailbuild/mailbuild.astro";
 import Facebook from "@components/facebook/facebook.astro";
 import Social from "@components/social/social.astro";
 const content = await replaceCmsEmbeds(Astro.props.content);
 
+var substitutions = {
+  blockquote: Blockquote,
+  icon: Icon,
+  Newsletter: Mailbuild,
+  Facebook,
+  Social,
+  'a[class*="button"]': Button,
+};
 var md;
 
 // @ts-ignore
@@ -24,13 +33,7 @@ if (ENV_BOOKSHOP_LIVE) {
     <RemoteMarkdown
       {content}
       sanitize={{ allowComponents: true }}
-      components={{
-        blockquote: Blockquote,
-        icon: Icon,
-        Newsletter: Mailbuild,
-        Facebook,
-        Social,
-      }}
+      components={substitutions}
     />
   )
 }
