--- a/src/shared/astro/Navigation.astro
+++ b/src/shared/astro/Navigation.astro
@@ -25,9 +25,12 @@ function makeTree(pages: any, currentPath?: string) {
     selected: 0,
   };
 
-  const filteredPages = pages.filter(
-    (page: any) => page.props.page.data.status === "online"
-  );
+  const filteredPages = pages.filter((page: any) => {
+    return (
+      page.props.page.data.status === "online" &&
+      (page.params.slug !== undefined || preferences.header.show_home)
+    );
+  });
 
   const sortedPages = filteredPages.sort(
     (a: any, b: any) =>
@@ -113,7 +116,7 @@ const Wrapper = depth ? Fragment : "nav";
                   : undefined
               }
             >
-              {page?.title}
+              <span>{page?.title}</span>
             </a>
             {"children" in page && <Astro.self depth={depth} pages={page} />}
           </li>
@@ -207,20 +210,20 @@ const Wrapper = depth ? Fragment : "nav";
     margin-right: 4rem;
     height: 100%;
 
-    /* gap: 2rem; */
-  }
-
-  li.depth-0 {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    gap: 1rem;
   }
 
   li.depth-0 > a {
-    padding: 20px;
+    height: 100%;
+    /* padding: 20px; */
     color: rgb(var(--header-color));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  li.depth-0 > a span {
+    padding: 10px 20px;
   }
 
   li.depth-0.children::after {
@@ -253,7 +256,7 @@ const Wrapper = depth ? Fragment : "nav";
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   }
 
-  .depth-1 a {
+  .depth-1 a span {
     padding: 10px 20px;
   }
 
@@ -273,8 +276,9 @@ const Wrapper = depth ? Fragment : "nav";
     background-color: #ddd;
   } */
 
-  .active > a {
+  .active > a span {
     font-weight: bold;
+    border: 4px solid #0001;
   }
 
   a {
@@ -282,10 +286,15 @@ const Wrapper = depth ? Fragment : "nav";
     text-decoration: none;
     color: rgb(0 0 0);
     cursor: default;
-    transition: background-color 0.2s ease-in-out;
   }
 
-  a:hover {
+  a > span {
+    border: 4px solid #0000;
+    transition: background-color 0.1s ease-out;
+    border-radius: var(--border-radius);
+  }
+
+  a:hover span {
     background-color: rgba(0, 0, 0, 0.1);
   }
 
@@ -293,7 +302,7 @@ const Wrapper = depth ? Fragment : "nav";
     cursor: pointer;
   }
 
-  a[href]:hover {
+  a[href]:hover span {
     background-color: rgba(0, 0, 0, 0.15);
   }
 </style>
