--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -11,3 +11,10 @@ img.align-right { float: right; margin-left: 5rem; }
 a.button {
 
 }
+
+h1.permalink {}
+h2.permalink {}
+h3.permalink {}
+h4.permalink {}
+h5.permalink {}
+h6.permalink {}
