--- a/src/components/lightbox/lightbox.astro
+++ b/src/components/lightbox/lightbox.astro
@@ -135,15 +135,24 @@ const { collection } = Astro.props;
     width: 100%;
     height: 100%;
     flex-direction: column;
+    justify-content: center;
     z-index: 2;
   }
 
-  #lightbox .items img {
+  #lightbox .items .img-wrapper {
     /* width: 100%; */
     /* height: 100%; */
+    /* object-fit: contain; */
+    /* object-position: center; */
+    /* background-size: contain; */
+    flex: 1 1 100%;
+    height: 100%;
+  }
+
+  #lightbox .items .img-wrapper img {
+    height: 100%;
     object-fit: contain;
     object-position: center;
-    flex: 1 1 100%;
   }
 
   #lightbox .items figure {
@@ -157,7 +166,7 @@ const { collection } = Astro.props;
     right: 0; */
     /* height: 6rem; */
     margin: 2rem;
-    flex: 1 0 0;
+    flex: 0 0 0;
 
     --text-color: 255 255 255;
     --heading-color: 255 255 255;
