--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -61,6 +61,7 @@ html {
   font-family: var(--default-font-family);
   display: grid;
   grid-template-columns: 1fr min(var(--page-max-width), 100vw) 1fr;
+  scroll-behavior: smooth;
   // background: linear-gradient(
   //   to right,
   //   rgb(var(--page-background-color)),
@@ -72,6 +73,12 @@ html {
   // );
 
   background-color: rgb(var(--page-background-color));
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
 }
 
 article {
@@ -228,6 +235,11 @@ button {
 // .missing-component {
 //   display: none;
 // }
+
+// Fix anchor offset
+:target {
+  scroll-margin-top: calc(var(--header-height) + (var(--indent) * 0.5));
+}
 
 .cms-editor-active .missing-component {
   display: block;
