Fix gallery to appease bookshop

--- a/src/components/gallery/gallery.astro
+++ b/src/components/gallery/gallery.astro
@@ -60,7 +60,7 @@ const sizes = `(max-width: 768px) calc((100vw / 2) - (${
           decoding="async"
           fit="crop"
           crop="faces,entropy"
-          ar={aspect}
+          aspect={aspect}
           {sizes}
           placeholder={true}
         />
