--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -8,7 +8,7 @@ export interface Props {
   height?: number;
   background_color?: string;
   classes?: any;
-  style?: Record<string, string>;
+  style?: Record<string, any>;
   indent?: boolean;
   key?: string;
 }
