Add facebook embed placeholder, fix editor.css

--- a/src/components/facebook/facebook.astro
+++ b/src/components/facebook/facebook.astro
@@ -1,5 +1,6 @@
 ---
 import preferences from "@data/preferences.json";
+import Icon from "@shared/icon.astro";
 
 const facebookURL = preferences?.general?.social.find(
   (e) => e?.name == "facebook"
@@ -22,16 +23,121 @@ const embedURL =
         scrolling="no"
         frameborder="0"
         allowfullscreen="true"
+        loading="lazy"
         allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+        onload="this.nextElementSibling.classList.add('hidden')"
       />
     )
   }
+  <div id="facebox-loading">
+    <div class="error">
+      <span>
+        <Icon name="fa6-solid:circle-xmark" height="2rem" />
+        <Icon name="fa6-brands:square-facebook" height="5rem" />
+      </span>
+      <h2>Facebook failed to load.</h2>
+      <p>Your browser or network may be blocking social media embeds.</p>
+      <a href={facebookURL}><p>View on Facebook</p></a>
+    </div>
+    <div class="loading">
+      <span>
+        <Icon name="svg-spinners:90-ring-with-bg" height="2rem" />
+        <Icon name="fa6-brands:square-facebook" height="5rem" />
+      </span>
+    </div>
+  </div>
 </div>
-<style>
-  div {
-    display: flex;
+
+<style lang="scss">
+  .facebox {
+    display: grid;
+    // justify-content: center;
     justify-content: center;
+    justify-items: center;
+    grid-template-columns: 1fr 340px 1fr;
     margin-top: var(--text-gap);
     width: 100%;
+    min-height: 10rem;
+
+    > * {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
+    }
+  }
+
+  #facebox-loading {
+    position: relative;
+    padding: 2rem;
+    background-color: #fefefe;
+    --text-color: 0 0 0;
+    --heading-color: 0 0 0;
+    border-radius: var(--border-radius);
+    width: 340px;
+    height: 500px;
+
+    span {
+      display: block;
+      position: relative;
+      height: 6rem;
+      width: 6rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-right: 1rem;
+      padding-bottom: 1rem;
+    }
+
+    .loading {
+      position: absolute;
+      top: 2rem;
+      animation: loading;
+      animation-delay: 10s;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+
+    .error {
+      animation: error;
+      visibility: hidden;
+      animation-delay: 10s;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+  }
+
+  #facebox-loading.hidden {
+    display: none;
+  }
+
+  @keyframes loading {
+    to {
+      visibility: hidden;
+    }
+  }
+
+  @keyframes error {
+    to {
+      visibility: visible;
+    }
+  }
+</style>
+
+<style is:global lang="scss">
+  #facebox-loading span svg {
+    position: absolute;
+
+    &:first-child {
+      color: red;
+      z-index: 1;
+      bottom: 0.4rem;
+      right: 0.4rem;
+      background-color: white;
+      border-radius: 100%;
+      padding: 0.2rem;
+    }
+  }
+
+  #facebox-loading .loading span svg:first-child {
+    color: #4267b2;
   }
 </style>
